--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     // Live Data
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     // Fragment
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
     // Activity
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
